# experimenters

./: .gitignore  README.md  blueprint.md  distributed_design.md  pyproject.toml
configs/: moe.yaml  tiny.py
examples/: train_deepseek_v3.py  train_gpt2.py
experimenters/: __init__.py  callbacks.py  registry.py
experimenters/attn/: __init__.py  mha.py  mla.py
experimenters/config/: __init__.py  attn.py  ffn.py  io.py  model.py  schema.py
experimenters/data/: loader.py  schema.py
experimenters/embed/: __init__.py  parallel.py  rope.py  token.py
experimenters/ffn/: __init__.py  _parallel.py  gelu.py  moe.py  swiglu.py
experimenters/model/: transformer.py
experimenters/norm/: __init__.py  rmsnorm.py
experimenters/trainer/: __init__.py
experimenters/utils/: checkpoint.py  dist.py  metrics.py
tests/: test_ffn_forward.py  test_mla_forward.py  test_norm_forward.py  test_transformer_forward.py
tools/: experiment.py
