[project]
name = "experimenters"
version = "0.0.1"
description = "Plug-and-play transformer research sandbox"
requires-python = ">=3.10"
dependencies = ["torch>=2.1", "numpy"]

[project.optional-dependencies]
dev  = ["pytest", "ruff", "black", "pre-commit"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["experimenters*"]


[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
